--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -122,6 +122,30 @@
   text-shadow: 1px 1px 2px #158467;
 }
 
+.btn-outline-danger {
+  font-family: "Novar";
+  width: 100%;
+  margin-bottom: 20px;
+  border-color: #ef4e7b;
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: #ef4e7b;
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1000ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn-outline-danger:hover {
+  color: white;
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  border-color: #ef4e7b;
+  text-shadow: 1px 1px 2px #ef4e7b;
+}
+
 .btn-arrow-left {
   margin-left: 75px;
   width: 15%;
