added message when no collabs

--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -10,6 +10,11 @@
     width: 30%;
     margin-bottom: 0;
   }
+
+  h1 {
+    font-size: 30px;
+    line-height: 56px;
+  }
 }
 
 .container-collab-cards {
