--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,7 +56,7 @@
     <% @user.work_of_arts.each do |art| %>
       <div class="work-of-art-card">
         <% if art.photo.attached? %>
-          <%= image_tag art.photo, crop: :fill %>
+          <%= link_to image_tag(art.photo), work_of_art_path(art), crop: :fill %>
         <% else %>
           <%= link_to image_tag("dodoma.png") %>
         <% end %>
