resized the pictures to be bigger on the woa show

--- a/app/assets/stylesheets/components/_work-of-art-card.scss
+++ b/app/assets/stylesheets/components/_work-of-art-card.scss
@@ -1,3 +1,25 @@
+#container-woa-cards-show {
+ display: block;
+ margin: auto;
+
+ #woa-card-show {
+  width: 400px;
+  display:block;
+  margin: auto;
+
+  .work-of-art-card-infos {
+    width: 400px;
+  }
+ }
+}
+
+#favorite-heart-show a {
+  right: 15px;
+  top: -40px;
+  color: black;
+  position: absolute;
+}
+
 .container-work-of-art-cards {
   display: flex;
   justify-content: space-around;
@@ -7,6 +29,11 @@
   .work-of-art-card {
     height: auto;
     width: 300px;
+
+    .artwork-show img {
+      width: 400px;
+      max-height: 533px;
+    }
   }
 
   .work-of-art-card .work-of-art-card-infos {
