added link on collab image and text-justify for description

--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -54,6 +54,10 @@
       color: black;
     }
 
+    h4 {
+      text-align: justify;
+    }
+
     .btn-outline-primary {
       font-family: "Novar";
       width: 40%;
