--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -148,6 +148,19 @@
   display: flex;
   flex-direction: column;
 
+  .collab-active-and-requests {
+    display: flex;
+    justify-content: center;
+
+    h2 {
+      text-align: center;
+      padding: 16px;
+      width: 300px;
+      border-radius: 5px;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    }
+  }
+
   .collab-list-infos {
     display: flex;
     flex-direction: row;
@@ -185,7 +198,7 @@
     }
 
     .founder {
-      width: 100px;
+      width: 150px;
     }
 
     .request-not-accepted-yet {
@@ -230,7 +243,7 @@
     }
 
     .founder {
-      width: 100px;
+      width: 150px;
     }
   }
 }
