--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,7 +39,7 @@
             <%= image_tag "account-logo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <%= link_to "My profile", user_path(current_user), class: "dropdown-item nav-link" %>
-              <%= link_to "My messages", "#", class: "nav-link" %>
+<!--               <%= link_to "My messages", "#", class: "nav-link" %> -->
               <%= link_to "My artworks", user_work_of_arts_path(current_user), class: "dropdown-item nav-link" %>
               <%= link_to "My favorites", myfavorites_path, class: "dropdown-item nav-link" %>
               <%= link_to "My collabs", user_collab_relationships_path, class: "dropdown-item nav-link" %>
