--- a/app/assets/stylesheets/components/_exhibition-card.scss
+++ b/app/assets/stylesheets/components/_exhibition-card.scss
@@ -24,6 +24,10 @@
   justify-content: space-evenly;
   align-items: center;
 
+  #category {
+    width: 150px;
+  }
+
   h3 {
     margin-bottom: 0;
     width: 200px;
