--- a/app/assets/stylesheets/components/_artist-card.scss
+++ b/app/assets/stylesheets/components/_artist-card.scss
@@ -1,17 +1,15 @@
 .container-artist-cards {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
 
   .artist-card {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
     height: auto;
     width: 300px;
-  }
-
-  .artist-card .artist-card-infos {
-    display: flex;
-    position: relative;
 
     a {
       text-decoration: none;
