--- a/app/assets/stylesheets/components/_work-of-art-card.scss
+++ b/app/assets/stylesheets/components/_work-of-art-card.scss
@@ -1,22 +1,19 @@
 .container-work-of-art-cards {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
 
   .work-of-art-card {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
     height: auto;
     width: 300px;
-  }
-
-  .work-of-art-card .work-of-art-card-infos {
-    display: flex;
-    position: relative;
-  }
 
   .work-of-art-card-infos {
+    display: flex;
     width: 300px;
-    position: absolute;
     flex-direction: column;
     text-align: left;
     position: relative;
@@ -44,6 +41,7 @@
       color: black;
     }
   }
+}
 
   img {
     width: 300px;
