--- a/app/views/collabs/show.html.erb
+++ b/app/views/collabs/show.html.erb
@@ -74,11 +74,22 @@
       </div>
     </div>
 
-  <% else %>
+  <% elsif @pending_users %>
 
   <div class="container-pending">
     <div class="collab-pending-users">
       <h2>Your request is pending !</h2>
+    </div>
+  </div>
+
+  <% else %>
+
+  <div class="container-pending">
+    <div class="collab-pending-users">
+      <h2>You cannot see more information because you're not a member</h2>
+      <div class="btn-collab-card">
+        <%= link_to "Ask to join this collab", user_collab_relationships_path(user_collab_relationship: {collab_id: @collab.id, user_id: current_user.id, status: "pending" }), method: :post , class: 'btn btn-outline-primary' %>
+      </div>
     </div>
   </div>
 
