--- a/app/assets/stylesheets/components/_headers.scss
+++ b/app/assets/stylesheets/components/_headers.scss
@@ -1,7 +1,7 @@
 h1 {
-  font-family: 'Lena';
-  color: black;
-  font-size: 64px;
+  font-family: 'Gravity-Bold';
+  color: #f4f4f4;
+  font-size: 80px;
 }
 
 h2 {
