--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,20 @@
 <div class="banner">
-  <div class="row">
-    <div class="col">
-      <h1>Artsouille</h1>
-      <h3>Find another artist, collab, co-create</h3>
-      <h3>Because art is too important not to be shared</h3>
-        <div class="btn-apply">
-          <%= link_to new_user_registration_path do %>
-            <h6 class="btn-join-now">Join us</h6>
-          <% end %>
-        </div>
-    </div>
+  <div class="homepage-title">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>ARTSOUILLE</h1>
+    <br>
+    <h3>Find another artist, collab, co-create.</h3>
+    <h3>Because Art is too important not to share.</h3>
+    <br>
+    <br>
+    <button class="homepage-btn btn-apply">
+      <%= link_to new_user_registration_path do %>
+        <span>JOIN US</span>
+      <% end %>
+    </button>
   </div>
 </div>
