--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -1,5 +1,41 @@
-.background_grey {
-  background-color: #f4f4f4;
+.homepage-navbar {
+  background-image: url(debashisv2.jpg);
+  background-size: cover;
+
+  .navbar-hr {
+    border-color: #f4f4f4;
+  }
+
+  .navbar-lewagon .navbar-collapse {
+
+    a {
+      text-shadow: 0px 0px 6px rgba(0,0,0,0.7);
+      color: #f4f4f4 !important;
+    }
+  }
+
+  .login {
+    text-shadow: 0px 0px 6px rgba(0,0,0,0.7);
+    color: #f4f4f4 !important;
+  }
+
+  .fa-search {
+    color: #f4f4f4 !important;
+  }
+  .btn-outline-info {
+    border-color: #f4f4f4;
+    outline-color: #f4f4f4;
+    box-shadow: inset 0 0 20px rgba(244, 244, 244, 0);
+  }
+
+  .btn-outline-info:hover {
+    background: transparent;
+    color: #f4f4f4;
+    box-shadow: inset 0 0 20px rgba(244, 244, 244, .5), 0 0 20px rgba(244, 244, 244, .2);
+    outline-color: #f4f4f4;
+    border-color: #f4f4f4;
+    text-shadow: 1px 1px 2px #f4f4f4;
+  }
 }
 
 .background_yellow {
