--- a/app/assets/stylesheets/components/_profile-card.scss
+++ b/app/assets/stylesheets/components/_profile-card.scss
@@ -31,5 +31,68 @@
       padding: 0;
       margin: 0;
     }
+
+    body {
+      font: 12px/1.5 'PT Sans', serif;
+      margin: 25px;
+    }
+
+    .collab-tags {
+      list-style: none;
+      margin: 0;
+      overflow: hidden;
+      padding: 0;
+      font-family: "Novar";
+
+      .collab-tags li {
+        float: left;
+      }
+
+      .collab-tag {
+        background: #bbbbbb;
+        border-radius: 3px 0 0 3px;
+        color: black;
+        display: inline-block;
+        height: 26px;
+        line-height: 26px;
+        padding: 0 20px 0 23px;
+        position: relative;
+        margin: 0 10px 10px 0;
+        text-decoration: none;
+        -webkit-transition: color 0.2s;
+      }
+
+      .collab-tag::before {
+        background: #ffe8e8;
+        border-radius: 10px;
+        box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+        content: '';
+        height: 6px;
+        left: 10px;
+        position: absolute;
+        width: 6px;
+        top: 10px;
+      }
+
+      .collab-tag::after {
+        background: #ffe8e8;
+        border-bottom: 13px solid transparent;
+        border-left: 10px solid #bbbbbb;
+        border-top: 13px solid transparent;
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+
+      .collab-tag:hover {
+        background-color: #1098ad;;
+        color: white;
+      }
+
+      .collab-tag:hover::after {
+         border-left-color: #1098ad;;
+      }
+    }
   }
 }
