--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,14 +11,15 @@
     flex-direction: column;
 
     h1 {
-    text-shadow: 0px 0px 6px rgba(0,0,0,0.7);
+      text-shadow: 0px 0px 6px rgba(0,0,0,0.7);
     }
 
     h3 {
-  text-shadow: 10px 10px 40px rgba(0,0,0,0.7),
-    -10px 10px 40px rgba(0,0,0,0.7),
-    -10px -10px 40px rgba(0,0,0,0.7),
-    10px -10px 40px rgba(0,0,0,0.7);
+      letter-spacing: 0.075em;
+      text-shadow: 10px 10px 40px rgba(0,0,0,0.7),
+      -10px 10px 40px rgba(0,0,0,0.7),
+      -10px -10px 40px rgba(0,0,0,0.7),
+      10px -10px 40px rgba(0,0,0,0.7);
       color: #f4f4f4;
     }
   }
