--- a/app/views/user_collab_relationships/index.html.erb
+++ b/app/views/user_collab_relationships/index.html.erb
@@ -10,7 +10,7 @@
     <br>
     <br>
     <div class="collab-active-and-requests">
-      <h2>Active collabs</h2>
+      <h2>My collabs</h2>
     </div>
     <br>
     <br>
