--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,16 +37,16 @@
             <% @user.user_collab_relationships.where(status: 'accepted').each do |usercollab|%>
               <li><p> <%= link_to usercollab.collab.name, collab_path(usercollab.collab), class: "collab-tag" %> </p></li>
             <% end %>
-          <ul>
+          </ul>
           <hr>
           <h4> <%= link_to 'See my exhibitions', exhibitions_path(query: @user.id) %> </h4>
           <br>
         </div>
         <% if current_user == @user  %>
-        <div class="btn-profile">
-          <%= link_to "Edit my profile", edit_user_path, class: "btn btn-outline-primary btn-edit" %>
-          <%= link_to "Add a new artwork", new_work_of_art_path(@work_of_art), class: "btn btn-outline-primary" %>
-        </div>
+          <div class="btn-profile">
+            <%= link_to "Edit my profile", edit_user_path, class: "btn btn-outline-primary btn-edit" %>
+            <%= link_to "Add a new artwork", new_work_of_art_path(@work_of_art), class: "btn btn-outline-primary" %>
+          </div>
         <% end %>
       </div>
     </div>
@@ -63,10 +63,10 @@
   <br>
   <br>
 
-  <div class="container-work-of-art-cards">
     <% if @user.work_of_arts.empty? %>
-      <h4>You haven't added any artwork yet. Click <%= link_to 'here', new_work_of_art_path(@work_of_art) %> to do so.</h4>
+      <h4 class="no-artwork">You haven't added any artwork yet. Click <%= link_to 'here', new_work_of_art_path(@work_of_art) %> to do so.</h4>
     <% end %>
+    <div class="container-work-of-art-cards">
     <% @user.work_of_arts.each do |art| %>
       <div class="work-of-art-card">
         <% if art.photo.attached? %>
