--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -9,6 +9,17 @@
   color: #d34444;
 }
 
+.favorite-heart-show a {
+  right: 10px;
+  top: 64px;
+  color: black;
+  position: absolute;
+}
+
+.favorite-heart-show:hover a {
+  color: #d34444;
+}
+
 .favorited {
   color: #d34444;
 }
@@ -16,11 +27,5 @@
 .favorite-icon {
   height: 50px;
   width: 50px;
-  border-radius: 50%;
-}
-
-.share-icon {
-  width: 50px;
-  height: 50px;
   border-radius: 50%;
 }
