--- a/app/views/work_of_arts/_like_button.html.erb
+++ b/app/views/work_of_arts/_like_button.html.erb
@@ -1,3 +1,3 @@
-<div class=" favorite-heart <%= 'favorited' if current_user&.favorited?(work_of_art) %>" data-id="<%= work_of_art.id %>">
+<div class="favorite-heart favorite-heart-show <%= 'favorited' if current_user&.favorited?(work_of_art) %>" data-id="<%= work_of_art.id %>">
   <i class="fas fa-heart fa-2x"></i>
 </div>
