--- a/app/views/work_of_arts/show.html.erb
+++ b/app/views/work_of_arts/show.html.erb
@@ -6,30 +6,46 @@
   <% end %>
   </div>
   <br>
-  <div class="container-work-of-art-cards" id="container-woa-cards-show">
-    <div class="work-of-art-card" id="woa-card-show">
-      <div class= "artwork-show">
-      <% if @work_of_art.photo.attached? %>
-        <%= cl_image_tag @work_of_art.photo.key, crop: :fill %>
-      </div>
+  <br>
+  <div class="woa-card-show">
+    <div class= "artwork-show">
+    <% if @work_of_art.photo.attached? %>
+      <%= cl_image_tag @work_of_art.photo.key, crop: :fill %>
+    <% else %>
+      <%= image_tag('dodoma.png') %>
+    <% end %>
+    </div>
+    <div class="work-of-art-card-infos">
+      <h3> <%= link_to @work_of_art.user.username, user_path(@work_of_art.user) %></h3>
+      <hr>
+      <h4><%= @work_of_art.name %></h4>
+      <hr>
+      <% if @work_of_art.creation_date.present? %>
+        <h4>  <%= @work_of_art.creation_date.strftime('%Y')  %> </h4>
       <% else %>
-        <%= image_tag('dodoma.png') %>
+        <h4>Creation date undefined</h4>
       <% end %>
-      <div class="work-of-art-card-infos">
-        <h3> <%= link_to @work_of_art.user.username, user_path(@work_of_art.user) %></h3>
-        <h4><%= @work_of_art.name %></h4>
-        <p><%= @work_of_art.creation_date.strftime('%Y') unless @work_of_art.creation_date.nil?%></p>
-        <p><%= @work_of_art.art_type %></p>
-        <p><%= @work_of_art.description %></p>
-        <% unless current_user == @work_of_art.user %>
-        <div class="favorite-heart" id="favorite-heart-show">
-          <%= link_to toggle_favorite_work_of_art_path(@work_of_art), remote: true, method: :post do %>
-          <%= render 'work_of_arts/like_button', work_of_art: @work_of_art %>
-          <% end %>
-        </div>
+      <hr>
+      <% if @work_of_art.art_type.present? %>
+        <h4>  <%= @work_of_art.art_type %> </h4>
+      <% else %>
+        <h4>Category undefined</h4>
+      <% end %>
+      <hr>
+      <% if @work_of_art.description.present? %>
+        <p>  <%= @work_of_art.description %> </p>
+      <% else %>
+        <p>There is no description.</p>
+      <% end %>
+      <% unless current_user == @work_of_art.user %>
+      <div class="favorite-heart-show">
+        <%= link_to toggle_favorite_work_of_art_path(@work_of_art), remote: true, method: :post do %>
+        <%= render 'work_of_arts/like_button', work_of_art: @work_of_art %>
         <% end %>
       </div>
+      <% end %>
     </div>
   </div>
+  <br>
   <br>
 </div>
