fixed a small mistake in footer links

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,8 +4,8 @@
     <ul>
       <li class="github"><a href="https://github.com/AlexandreDidion/Artsouille" target="blank" rel="noopener noreferrer"><i class="fab fa-github fa-1x"></i></a></li>
       <li class="facebook"><a href="https://www.facebook.com/lewagonbrussels/" target="blank" rel="noopener noreferrer"><i class="fab fa-facebook-f fa-1x"></i></a></li>
-      <li class="instagram"><a href="https://twitter.com/lewagonbrussels" target="blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-1x"></i></a></li>
-      <li class="twitter"><a href="https://www.instagram.com/lewagonbelgium" target="blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-1x"></i></a></li>
+      <li class="instagram"><a href="https://www.instagram.com/lewagonbelgium" target="blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-1x"></i></a></li>
+      <li class="twitter"><a href="https://twitter.com/lewagonbrussels" target="blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-1x"></i></a></li>
     </ul>
   </div>
 
