--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -68,8 +68,9 @@
 .container-collab-image img {
   display: block;
   margin: auto;
-  max-width: 400px;
-  max-height: 600px;
+  width: 400px;
+  max-height: 533px;
+  pointer-events: none;
 }
 
 .collab-card-members-todo {
@@ -172,7 +173,7 @@
 
     h3 {
       margin-bottom: 0;
-      width: 200px;
+      width: 250px;
 
       a {
         color: inherit;
@@ -201,12 +202,16 @@
     }
 
     .founder {
-      width: 150px;
+      width: 200px;
     }
 
     .request-not-accepted-yet {
       width: 300px;
       text-align: center;
+    }
+
+    .btn-outline-primary {
+      margin-bottom: 0;
     }
   }
 
@@ -246,7 +251,7 @@
     }
 
     .founder {
-      width: 150px;
+      width: 200px;
     }
   }
 }
