--- a/app/views/collabs/_form-collab.html.erb
+++ b/app/views/collabs/_form-collab.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-4">
       <div class="form-login gradient-border">
-        <h2>Create a new collab</h2>
+        <h2>Create or edit a collab</h2>
         <%= simple_form_for @collab do |f| %>
           <div class="form-inputs">
             <%= f.input :name %>
