--- a/app/views/collabs/index.html.erb
+++ b/app/views/collabs/index.html.erb
@@ -25,7 +25,7 @@
     <% @collabs.each do |collab| %>
     <% unless collab.users.include?(current_user) %>
     <div class="collab-list-infos">
-      <h3><%= collab.name %></h3>
+      <h3><%= link_to collab.name, collab_path(collab) %></h3>
       <h4><%= collab.description %></h4>
       <p class="founder"> Created by <u><%= collab.users.first.username %></u> </p>
       <div class="btn-collab-card">
