better performance for homepage, made the size of images three times smaller while retaining quality. navbar not fixed anymore on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,13 @@
   min-height: 100vh;
 }
 
-#content-wrap {
+.no-padding-top {
+  padding-top: 0;
+  padding-bottom: 150px;
+}
+.content-wrap {
   padding-top: 90px;
   padding-bottom: 150px;
 }
+
+
