--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -2,6 +2,14 @@
   background-image: url(debashisv2.jpg);
   background-size: cover;
 
+  #padding-top-navbar-container {
+    padding-top: 16px;
+  }
+
+  #top-divider {
+    margin-top: 0;
+  }
+
   .navbar-hr {
     border-color: #f4f4f4;
   }
