--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -16,7 +16,7 @@
       <h3><%= link_to exhibition.name, exhibition_path(exhibition) %></h3>
       <h4><%= exhibition.description.truncate(50, separator: ' ') %></h4>
       <h4 id="category"><%= exhibition.category %></h4>
-      <h4><%= exhibition.city %></h4>
+      <h4><%= exhibition.city %>, <%= exhibition.country %></h4>
       <div class="btn-exhibition-info">
         <%= link_to "Get info", exhibition_path(exhibition), class: "btn btn-outline-primary" %>
       </div>
