--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
     <title>Artsouille - Collab and Share</title>
     <meta name="description" content="Platform to meet new artists, create collectives and share artworks">
     <!-- Facebook Open Graph data -->
-    <meta property="og:title" content="Artsouille - Collab and Share" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="www.artsouille.com" />
-    <meta property="og:image" content="<%= image_tag('meta_tag_facebook.png') %>" />
-    <meta property="og:description" content="Platform to meet new artists, create collectives and share artworks" />
-    <meta property="og:site_name" content="Artsouille" />
+    <meta property="og:title" content="Artsouille - Collab and Share">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="www.artsouille.com">
+    <meta property="og:image" content="<%= image_tag('meta_tag_facebook.png') %>">
+    <meta property="og:description" content="Platform to meet new artists, create collectives and share artworks">
+    <meta property="og:site_name" content="Artsouille">
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
