--- a/app/views/collabs/index.html.erb
+++ b/app/views/collabs/index.html.erb
@@ -37,7 +37,7 @@
     <% end %>
     <% if collab.users.include? current_user %>
       <div class="btn-collab-card">
-        <%= link_to "View this collab", collab_path(collab), class: 'btn btn-outline-primary btn-view-this-collab' %>
+        <%= link_to "View this collab", collab_path(collab), class: 'btn btn-outline-success' %>
       </div>
     <% end %>
     </div>
