--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -65,7 +65,6 @@
   }
 }
 
-
 .container-collab-image {
 
   img {
@@ -179,6 +178,7 @@
     h4 {
       margin-bottom: 0;
       width: 300px;
+      text-align: justify;
 
       a {
         color: inherit;
@@ -194,10 +194,6 @@
         color: inherit;
         text-decoration: none;
       }
-    }
-
-    .founder {
-      width: 200px;
     }
 
     .request-not-accepted-yet {
@@ -253,10 +249,6 @@
         color: inherit;
         text-decoration: none;
       }
-    }
-
-    .founder {
-      width: 200px;
     }
   }
 }
