--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,7 +65,7 @@
     <% if @user.work_of_arts.empty? && @user == current_user%>
       <h4 class="no-artwork">You haven't added any artwork yet. Click <%= link_to 'here', new_work_of_art_path(@work_of_art) %> to do so.</h4>
       <% else %>
-      <h4 class="no-artwork"> This artist doesn't have any artwork yet</h4>
+      <h4 class="no-artwork">This artist doesn't have any artwork yet.</h4>
     <% end %>
     <div class="container-work-of-art-cards">
     <% @user.work_of_arts.each do |art| %>
