--- a/app/assets/stylesheets/components/_collab-card.scss
+++ b/app/assets/stylesheets/components/_collab-card.scss
@@ -178,7 +178,6 @@
     h4 {
       margin-bottom: 0;
       width: 300px;
-      text-align: justify;
 
       a {
         color: inherit;
@@ -224,7 +223,7 @@
 
     h3 {
       margin-bottom: 0;
-      width: 200px;
+      min-width: 200px;
 
       a {
         color: inherit;
@@ -234,7 +233,7 @@
 
     h4 {
       margin-bottom: 0;
-      width: 300px;
+      min-width: 300px;
 
       a {
         color: inherit;
@@ -244,6 +243,9 @@
 
     p {
       margin-bottom: 0;
+      min-width: 200px;
+      text-align: center;
+      padding-left: 50px;
 
       a {
         color: inherit;
