removed hover effect on image account in navbar and fixed the alignement in my collab

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,6 +3,12 @@
   margin-right: 8px;
   border-radius: 50%;
 }
+
+.avatar:hover {
+  transition: none;
+  filter: none;
+}
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
